--- a/src/assets/component-one/style.css
+++ b/src/assets/component-one/style.css
@@ -1,4 +1,199 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
 body {
-	background-color: white;
-	color: black;
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* start here */
+
+@font-face {
+  font-family: 'roboto regular';
+  src: url('roboto-woff-woff2/roboto-regular-webfont.woff') format('woff'),
+    url('roboto-woff-woff2/roboto-regular-webfont.woff2') format('woff2');
+}
+
+* {
+  outline: 1px solid blue;
+}
+
+ul.unordered_links {
+  display: flex;
+  padding: 0.5rem;
+  justify-content: center;
+}
+
+ul.more_unordered_links {
+  display: flex;
+  padding: 0.5rem 0.75rem;
+  background-color: yellowgreen;
+}
+
+li {
+  display: flex;
+  align-items: center;
+}
+
+.contain_link > a,
+.close_toggler > div,
+.more_links > a {
+  padding: 0.5rem 0.25rem;
+  color: black;
+  text-decoration: none;
+  background-color: white;
+  border: 1px solid #312e57;
+  border-top: 10px solid #312e57;
+  font-family: 'roboto regular';
+}
+
+.close_toggler {
+  margin-left: auto;
+}
+
+.close_toggler > div:hover {
+  background-color: red;
+  color: white;
+}
+
+.contain_link > a:hover {
+  background-color: beige;
+}
+
+.contain_link > a:active {
+  background-color: wheat;
+}
+
+li.more_links > a.active-toggler {
+  background-color: yellowgreen;
+}
+
+#more_links_inside {
+  display: none;
+}
+
+#more_links_inside.visible {
+  display: block;
 }
